create github pages

--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-k" style="background-color: rgb(250, 197, 28);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-k" style="background-color: rgb(250, 197, 28);">
 
     
 
@@ -72,7 +72,7 @@
                     <h4 class="card-title">Duravit P3 Comforts Back to Wall Toilet</h4>
                     <h5 class="card-subtitle"><span style="font-size: 16px; line-height: 1.7857;">Rimless, close coupled back to wall toilet</span><br><div>Retails for $1299.<br>Product code: D4500200</div><div>Our price…</div></h5>
                     <p class="card-text"><strong>$699</strong><br></p>
-                    <div class="card-btn"><a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=699&amp;item_name=Duravit+P3+Comforts+Back+to+Wall+Toilet&amp;currency_code=AUD" class="btn btn-danger">BUY NOW</a> <a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=699&amp;item_name=Duravit+P3+Comforts+Back+to+Wall+Toilet&amp;currency_code=AUD" class="btn btn-danger">ADD TO CART</a></div>
+                    <div class="card-btn"><a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_xclick&amp;amount=699&amp;item_name=Duravit+P3+Comforts+Back+to+Wall+Toilet&amp;currency_code=AUD" class="btn btn-danger">BUY NOW</a> <a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=699&amp;item_name=Duravit+P3+Comforts+Back+to+Wall+Toilet&amp;currency_code=AUD" class="btn btn-black">ADD TO CART</a></div>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                     <h4 class="card-title">Duravit Happy D.2 Wall Hung Washbasin</h4>
                     <h5 class="card-subtitle">A chic, versatile and timelessly <br>modern collection.<br>Product code: D2300430<br>Retails for $599.<br>Our price…</h5>
                     <p class="card-text"><strong>$300</strong><br></p>
-                    <div class="card-btn"><a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=300&amp;item_name=Duravit+Happy+D.2+Wall+Hung+Washbasin&amp;currency_code=AUD" class="btn btn-danger">BUY NOW</a> <a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=300&amp;item_name=Duravit+Happy+D.2+Wall+Hung+Washbasin&amp;currency_code=AUD" class="btn btn-black">ADD TO CART</a></div>
+                    <div class="card-btn"><a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_xclick&amp;amount=300&amp;item_name=Duravit+Happy+D.2+Wall+Hung+Washbasin&amp;currency_code=AUD" class="btn btn-danger">BUY NOW</a> <a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=300&amp;item_name=Duravit+Happy+D.2+Wall+Hung+Washbasin&amp;currency_code=AUD" class="btn btn-black">ADD TO CART</a></div>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         <h4 class="card-title">Rheem Stellar® SS Electric Storage Water Heater - 315L</h4>
                         <h5 class="card-subtitle">Stainless steel. Dual handed connection. 4.8kW rating. Hardwired<br>Product code: D2300430<br>Retails for $1087.<br>Our price…</h5>
                         <p class="card-text"><strong>$834</strong></p>
-                        <div class="card-btn"><a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=834&amp;item_name=Rheem+Stellar%C2%AE+SS+Electric+Storage+Water+Heater+-+315L&amp;currency_code=AUD" class="btn btn-danger">BUY NOW</a> <a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=834&amp;item_name=Rheem+Stellar%C2%AE+SS+Electric+Storage+Water+Heater+-+315L&amp;currency_code=AUD" class="btn btn-black">ADD TO CART</a></div>
+                        <div class="card-btn"><a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_xclick&amp;amount=834&amp;item_name=Rheem+Stellar%C2%AE+SS+Electric+Storage+Water+Heater+-+315L&amp;currency_code=AUD" class="btn btn-danger">BUY NOW</a> <a href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=834&amp;item_name=Rheem+Stellar%C2%AE+SS+Electric+Storage+Water+Heater+-+315L&amp;currency_code=AUD" class="btn btn-black">ADD TO CART</a></div>
                     </div>
                 </div>
             </div>
