--- a/basins.html
+++ b/basins.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<script>var shopcartSettings = {"shopcart_top_offset":120,"side_offset":20,"site_width":1150,"shopcart_icon_color":"#28324e","shopcart_back_color":"#fac51c","shopcart_icon_size":40,"sc_count_color":"#FFFFFF","sc_count_back_color":"#d14841","sc_count_size":13,"checkout_button":"Check Out with"};</script>
+<script>var shopcartSettings = {"shopcart_top_offset":120,"side_offset":20,"site_width":1150,"shopcart_icon_color":"#fac51c","shopcart_back_color":"#000000","shopcart_icon_size":40,"sc_count_color":"#FFFFFF","sc_count_back_color":"#d14841","sc_count_size":13,"checkout_button":"Check Out with"};</script>
 <section id="ext_menu-g">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -60,7 +60,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
