--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<script>var shopcartSettings = {"shopcart_top_offset":120,"side_offset":20,"site_width":1150,"shopcart_icon_color":"#28324e","shopcart_back_color":"#fac51c","shopcart_icon_size":40,"sc_count_color":"#FFFFFF","sc_count_back_color":"#d14841","sc_count_size":13,"checkout_button":"Check Out with"};</script>
+<script>var shopcartSettings = {"shopcart_top_offset":120,"side_offset":20,"site_width":1150,"shopcart_icon_color":"#fac51c","shopcart_back_color":"#000000","shopcart_icon_size":40,"sc_count_color":"#FFFFFF","sc_count_back_color":"#d14841","sc_count_size":13,"checkout_button":"Check Out with"};</script>
 <section id="ext_menu-7">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-k" style="background-color: rgb(250, 197, 28);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-k" style="background-color: rgb(250, 197, 28);">
 
     
 
