--- a/toilet.html
+++ b/toilet.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-<script>var shopcartSettings = {"shopcart_top_offset":120,"side_offset":20,"site_width":1150,"shopcart_icon_color":"#28324e","shopcart_back_color":"#fac51c","shopcart_icon_size":40,"sc_count_color":"#FFFFFF","sc_count_back_color":"#d14841","sc_count_size":13,"checkout_button":"Check Out with"};</script>
+<script>var shopcartSettings = {"shopcart_top_offset":120,"side_offset":20,"site_width":1150,"shopcart_icon_color":"#fac51c","shopcart_back_color":"#000000","shopcart_icon_size":40,"sc_count_color":"#FFFFFF","sc_count_back_color":"#d14841","sc_count_size":13,"checkout_button":"Check Out with"};</script>
 <section id="ext_menu-i">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader12 tab-content mbr-after-navbar" id="extHeader12-m" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader12 tab-content mbr-after-navbar" id="extHeader12-m" style="background-color: rgb(239, 239, 239);">
 
      
     <div class="mbr-table mbr-table-full">
