--- a/toilet.html
+++ b/toilet.html
@@ -37,7 +37,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-white" href="www.smh.com.au">BUILD WORKS - YOU WON'T GET IT ANY CHEAPER!</a>
+                        <a class="navbar-caption text-white" href="home.html">BUILD WORKS - YOU WON'T GET IT ANY CHEAPER!</a>
                     </div>
 
                 </div>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader12 tab-content mbr-after-navbar" id="extHeader12-m" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader12 tab-content mbr-after-navbar" id="extHeader12-m" style="background-color: rgb(239, 239, 239);">
 
      
     <div class="mbr-table mbr-table-full">
