--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-k" style="background-color: rgb(250, 197, 28);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-k" style="background-color: rgb(250, 197, 28);">
 
     
 
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">Delivered FREE to Sydney and it's regions</h3>
-                
+                <small class="mbr-section-subtitle">at this stage Build Works is only selling to Sydney at it's regions.</small>
             </div>
         </div>
     </div>
