create github pages

--- a/toilet.html
+++ b/toilet.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-o" style="background-color: rgb(40, 50, 78); padding-top: 140px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-o" style="background-color: rgb(40, 50, 78); padding-top: 140px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -95,7 +95,7 @@
                             <div class="mbr-section-text lead">
                                 <p><strong>RIMLESS, CLOSE COUPLED <br>BACK TO WALL TOILET</strong><br><strong><em>$699.00</em></strong><br>RETAILS FOR $1299.00<br><br>The Duravit P3 Comforts Rimless Back to Wall Toilet. Re-defining comfort. The P3 Comforts offers generous surface areas for bathroom essentials and elegant design with gently curved edges and soft pleasant transitions.<br><br>Duravit P3 Comforts Rimless Toilet greater comfort and hygiene<br><br>Product code: D4500200<br></p>
                             </div>
-                            <div class="left-button"><a type="submit" class="btn btn-danger" href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=1299&amp;item_name=Duravit+P3+Comforts+Back+to+Wall+Toilet&amp;currency_code=AUD">ADD TO CART</a></div>
+                            <div class="left-button"><a type="submit" class="btn btn-danger" href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_xclick&amp;amount=699&amp;item_name=Duravit+P3+Comforts+Back+to+Wall+Toilet&amp;currency_code=AUD">BUY NOW</a> <a type="submit" class="btn btn-danger" href="https://www.paypal.com/cgi-bin/webscr?business=malcolmsilis%40gmail.com&cmd=_cart&amp;amount=1299&amp;item_name=Duravit+P3+Comforts+Back+to+Wall+Toilet&amp;currency_code=AUD">ADD TO CART</a></div>
                         </div>
 
                         
