--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-k" style="background-color: rgb(250, 197, 28);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-k" style="background-color: rgb(250, 197, 28);">
 
     
 
